<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_option_top"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/shape_rectangle_white_bottom_gray" >

        <TextView
            android:id="@+id/classify"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/img_triangle_down_gray"
            android:gravity="center"
            android:text="@string/classify" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/classify"
            android:gravity="center"
            android:text="@string/time" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/time"
            android:gravity="center"
            android:text="@string/type" />

        <TextView
            android:id="@+id/rank_xx"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/intro_navi_vline"
            android:gravity="center"
            android:text="@string/rank_xx" />

        <TextView
            android:id="@+id/rank_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/rank_xx"
            android:drawableLeft="@drawable/intro_navi_vline"
            android:gravity="center"
            android:text="@string/rank_subscribe" />

        <TextView
            android:id="@+id/rank_popularity"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/rank_subscribe"
            android:gravity="center"
            android:text="@string/rank_popular" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/rl_option_top"
        android:background="@color/comm_gray"
        android:clickable="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_two_type"
            android:layout_width="85dp"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_classify_group"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:background="@drawable/shape_rectangle_white_bottom_gray"
                android:gravity="center"
                android:text="@string/rank_chose_class" />

            <TextView
                android:id="@+id/txt_time_group"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:background="@drawable/shape_rectangle_white_bottom_gray"
                android:gravity="center"
                android:text="@string/rank_chose_time" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_filterc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/comm_gray" >
        </ListView>
    </LinearLayout>

</RelativeLayout>